# OpENerElectricalEnergyObject

./: CMakeLists.txt  README.md  cipelectricalenergy.c  cipelectricalenergy.h  license.txt
data/: OpENer.stc
